Add pending triage label to issue templates

--- a/ISSUE_TEMPLATE/2-bug.yml
+++ b/ISSUE_TEMPLATE/2-bug.yml
@@ -1,6 +1,6 @@
 name: 🐞 Bug Report
 description: Report something that's incorrect or not working properly
-labels: ["type: bug"]
+labels: ["type: bug", "pending triage"]
 body:
   - type: textarea
     id: expected
