--- a/ISSUE_TEMPLATE/1-feature.yml
+++ b/ISSUE_TEMPLATE/1-feature.yml
@@ -1,6 +1,6 @@
 name: 🚀 Feature Request
 description: Suggest an idea
-labels: ["type: enhancement"]
+labels: ["type: enhancement", "pending triage"]
 body:
   - type: textarea
     id: description
